--- a/style.css
+++ b/style.css
@@ -315,16 +315,17 @@ html {
  }
  .menue9{
     width:auto;
-    height:30px;
+    height:20px;
     border:3px solid orange;
     background-color: orange;
     border-radius: 5px;
     box-shadow: 0 0 10px orange;
+    
  }
  .menue9 a{
     text-decoration: none;
     color: black;
-    font-size: 20px;
+    font-size: 14px;
     font-weight: bold;
  }
  .menue10{
@@ -519,6 +520,11 @@ input.error-border {
     justify-content: space-around;
     font-size: 10px;
 }
+@media(max-width:339px){
+   .menue2 .menue9{
+        margin-bottom: 40px;
+    }
+}
 
 @media(max-width:375px){
     .navbar a{
@@ -660,6 +666,7 @@ input.error-border {
    .menue7{
     font-size: 18px;
    }
+   
    .men{
     font-size: 35px;
    }
